k8s/overlays/gcp/nginx-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    spec:
      containers:
      - name: nginx
        command: ["sh", "-c", "cp /etc/nginx/nginx.conf.gke /etc/nginx/nginx.conf && /docker-entrypoint-certs.sh"]
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf.gke
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
